--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
     <div class="top-section">
         <div class="image-circle">
             <img src="profile.webp" alt="Profile">
@@ -15,26 +14,29 @@
         <div class="current-year">April 2018</div>
     </div>
 
- 
+    <div class="info-card">
+        <p id="dynamic-text">This is the text for April 2018.</p>
+    </div>
+
     <div class="timeline-container">
         <div class="timeline">
-            <div class="timeline-item" data-year="April 2018">
+            <div class="timeline-item" data-year="April 2018" data-text="This is the text for April 2018.">
                 <div class="circle">April 2018</div>
                 <div class="line"></div>
             </div>
-            <div class="timeline-item" data-year="April 2019">
+            <div class="timeline-item" data-year="April 2019" data-text="This is the text for April 2019.">
                 <div class="circle">April 2019</div>
                 <div class="line"></div>
             </div>
-            <div class="timeline-item" data-year="April 2020">
+            <div class="timeline-item" data-year="April 2020" data-text="This is the text for April 2020.">
                 <div class="circle">April 2020</div>
                 <div class="line"></div>
             </div>
-            <div class="timeline-item" data-year="April 2021">
+            <div class="timeline-item" data-year="April 2021" data-text="This is the text for April 2021.">
                 <div class="circle">April 2021</div>
                 <div class="line"></div>
             </div>
-            <div class="timeline-item" data-year="April 2022">
+            <div class="timeline-item" data-year="April 2022" data-text="This is the text for April 2022.">
                 <div class="circle">April 2022</div>
             </div>
         </div>
