--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,47 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Horizontal Timeline</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="top-section">
-        <div class="image-circle">
-            <img src="profile.webp" alt="Profile">
-        </div>
-        <div class="current-year">April 2018</div>
+      <div class="image-circle">
+        <img src="profile.webp" alt="Profile" />
+      </div>
+      <div class="current-year">April 2018</div>
     </div>
 
     <div class="info-card">
-        <p id="dynamic-text">This is the text for April 2018.</p>
+      <p id="dynamic-text">
+        April is the fourth month of the year in the Gregorian calendar and is
+        known for its vibrant transition from winter to spring in the Northern
+        Hemisphere. This month, which has 30 days, is often associated with
+        blooming flowers, longer days, and milder weather
+      </p>
     </div>
 
     <div class="timeline-container">
-        <div class="timeline">
-            <div class="timeline-item" data-year="April 2018" data-text="This is the text for April 2018.">
-                <div class="circle">April 2018</div>
-                <div class="line"></div>
-            </div>
-            <div class="timeline-item" data-year="April 2019" data-text="This is the text for April 2019.">
-                <div class="circle">April 2019</div>
-                <div class="line"></div>
-            </div>
-            <div class="timeline-item" data-year="April 2020" data-text="This is the text for April 2020.">
-                <div class="circle">April 2020</div>
-                <div class="line"></div>
-            </div>
-            <div class="timeline-item" data-year="April 2021" data-text="This is the text for April 2021.">
-                <div class="circle">April 2021</div>
-                <div class="line"></div>
-            </div>
-            <div class="timeline-item" data-year="April 2022" data-text="This is the text for April 2022.">
-                <div class="circle">April 2022</div>
-            </div>
+      <div class="timeline">
+        <div
+          class="timeline-item"
+          data-year="April 2018"
+          data-text="This is the text for April 2018."
+        >
+          <div class="circle">April 2018</div>
+          <div class="line"></div>
         </div>
+        <div
+          class="timeline-item"
+          data-year="April 2019"
+          data-text="This is the text for April 2019."
+        >
+          <div class="circle">April 2019</div>
+          <div class="line"></div>
+        </div>
+        <div
+          class="timeline-item"
+          data-year="April 2020"
+          data-text="This is the text for April 2020."
+        >
+          <div class="circle">April 2020</div>
+          <div class="line"></div>
+        </div>
+        <div
+          class="timeline-item"
+          data-year="April 2021"
+          data-text="This is the text for April 2021."
+        >
+          <div class="circle">April 2021</div>
+          <div class="line"></div>
+        </div>
+        <div
+          class="timeline-item"
+          data-year="April 2022"
+          data-text="This is the text for April 2022."
+        >
+          <div class="circle">April 2022</div>
+          <div class="line"></div>
+        </div>
+        <div
+          class="timeline-item"
+          data-year="April 2023"
+          data-text="This is the text for April 2022."
+        >
+          <div class="circle">April 2023</div>
+          <div class="line"></div>
+        </div>
+        <div
+          class="timeline-item"
+          data-year="April 2024"
+          data-text="This is the text for April 2022."
+        >
+          <div class="circle">April 2024</div>
+        </div>
+      </div>
     </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
