--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="top-section">
       <div class="image-circle">
-        <img src="profile.webp" alt="Profile" />
+        <img src="./media/profile.webp" alt="Profile" />
       </div>
       <div class="current-year">April 2018</div>
     </div>
