--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -28,7 +28,7 @@
         <div
           class="timeline-item"
           data-year="April 2018"
-          data-text="This is the text for April 2018."
+          data-text="Drones have revolutionized the field of photography and videography by providing unique aerial perspectives that were previously difficult or impossible to capture. Equipped with high-resolution cameras, drones can take stunning photos and videos from the sky, making them invaluable tools for filmmakers, photographers, and content creators. They are commonly used in real estate to showcase properties, in tourism to highlight scenic locations, and in sports to capture dynamic action shots"
         >
           <div class="circle">April 2018</div>
           <div class="line"></div>
@@ -36,7 +36,7 @@
         <div
           class="timeline-item"
           data-year="April 2019"
-          data-text="This is the text for April 2019."
+          data-text="In agriculture, drones are used for precision farming, which involves monitoring crops and livestock to improve efficiency and yield. Drones equipped with multispectral sensors can assess crop health, detect diseases, and monitor irrigation systems. They can also be used for spraying pesticides and fertilizers, reducing the need for manual labor and minimizing the environmental impact"
         >
           <div class="circle">April 2019</div>
           <div class="line"></div>
@@ -44,7 +44,7 @@
         <div
           class="timeline-item"
           data-year="April 2020"
-          data-text="This is the text for April 2020."
+          data-text="Delivery drones are becoming increasingly popular for transporting goods, especially in remote or hard-to-reach areas. Companies like Amazon and UPS are experimenting with drone delivery systems to provide faster and more efficient service. These drones can deliver packages, medical supplies, and even food, reducing delivery times and lowering transportation costs1."
         >
           <div class="circle">April 2020</div>
           <div class="line"></div>
@@ -52,7 +52,7 @@
         <div
           class="timeline-item"
           data-year="April 2021"
-          data-text="This is the text for April 2021."
+          data-text="Drones play a crucial role in search and rescue missions, especially in challenging environments where it may be dangerous or impractical for humans to go. Equipped with thermal imaging cameras and GPS, drones can quickly locate missing persons, assess disaster-stricken areas, and deliver emergency supplies. Their ability to cover large areas quickly makes them invaluable tools for emergency responders1."
         >
           <div class="circle">April 2021</div>
           <div class="line"></div>
@@ -60,7 +60,7 @@
         <div
           class="timeline-item"
           data-year="April 2022"
-          data-text="This is the text for April 2022."
+          data-text="Drones are used for environmental monitoring and conservation efforts. They can track wildlife populations, monitor deforestation, and assess the health of ecosystems. Drones equipped with sensors can collect data on air and water quality, helping researchers and conservationists make informed decisions to protect the environment"
         >
           <div class="circle">April 2022</div>
           <div class="line"></div>
@@ -68,7 +68,7 @@
         <div
           class="timeline-item"
           data-year="April 2023"
-          data-text="This is the text for April 2022."
+          data-text="Drones are increasingly used for inspecting infrastructure such as bridges, power lines, and pipelines. They can access hard-to-reach areas and provide detailed images and data, allowing for more efficient and safer inspections. This use of drones helps in identifying potential issues early, reducing maintenance costs, and preventing accidents"
         >
           <div class="circle">April 2023</div>
           <div class="line"></div>
@@ -76,7 +76,7 @@
         <div
           class="timeline-item"
           data-year="April 2024"
-          data-text="This is the text for April 2022."
+          data-text="In the military, drones are used for surveillance, reconnaissance, and combat operations. They can gather intelligence, monitor enemy movements, and carry out targeted strikes with precision. Drones reduce the risk to human soldiers and provide real-time data, making them essential tools in modern warfare1."
         >
           <div class="circle">April 2024</div>
         </div>
